Fix SonarCloud code smells: use method references and Stream.toList in race condition tests (section 15.2)